fixed contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ p{
 
 a{
   font-size: 16px;
-  color: #c12258;
+  color: #B21F50;
   text-decoration-line: underline;
   text-decoration-style: wavy;
 }
